# yolo-lp-detect-cpp

./: CMakeLists.txt  README.md  lp_detect_v5n.ncnn.param  main.cpp  plate.cpp  plate.hpp  tf_ocr.cpp  tf_ocr.hpp  yolo.cpp  yolo.hpp
